<resources>
    <string name="app_name">My App Portifolio</string>
    <string name="popular_movies">POPULAR MOVIES</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="make_your_app_material">MAKE YOUR APP MATERIAL</string>
    <string name="go_ubiqueitous">GO UBIQUEITOUS</string>
    <string name="capstone">CAPSTONE</string>
    <string name="stocke_hawk">STOCKE HAWK</string>


</resources>
