<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/home_Layout"
              android:layout_gravity="center"
              android:orientation="vertical"
              android:paddingTop="@dimen/Padding_Top_Norm"
              android:paddingRight="@dimen/Padding_Right_Norm"
              android:paddingLeft="@dimen/Padding_Left_Norm"
              android:paddingBottom="@dimen/Padding_Bottom_Norm"
              android:gravity="center_horizontal"
              android:layout_width="wrap_content"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/FontSize_Max"
        android:textColor="@android:color/black"
        android:text="My Nanodegree Apps!"/>

    <Button
        android:id="@+id/populat_movies"
        style="@style/home_button"
        android:text="@string/popular_movies"/>

    <Button
        android:id="@+id/stocke_hawk"
        style="@style/home_button"
        android:text="@string/stocke_hawk"/>

    <Button
        android:id="@+id/build_it_bigger"
        style="@style/home_button"
        android:text="@string/build_it_bigger"/>

    <Button
        android:id="@+id/make_your_app_material"
        style="@style/home_button"
        android:text="@string/make_your_app_material"/>

    <Button
        android:id="@+id/go_ubiqueitous"
        style="@style/home_button"
        android:text="@string/go_ubiqueitous"/>

    <Button
        android:id="@+id/capstone"
        style="@style/home_button"
        android:text="@string/capstone"/>

</LinearLayout>